# NatronGitHub-Natron

./: CMakeLists.txt  INSTALL_MACOS.md
.github/workflows/: build_pacman_repo.yml
App/: CMakeLists.txt
Documentation/source/devel/PythonReference/NatronGui/: PyTabWidget.rst
Engine/: AppManager.cpp  Engine.pro  FileSystemModel.cpp  StandardPaths.cpp
Global/: QtCompat.h
Gui/: AboutWindow.cpp  ClickableLabel.cpp  ClickableLabel.h  CurveEditor.cpp  CurveEditor.h  CurveWidget.cpp  CurveWidget.h  DopeSheetEditor.cpp  DopeSheetEditor.h  DopeSheetHierarchyView.cpp  GuiPrivate.cpp  Histogram.cpp  Histogram.h  KnobGuiBool.cpp  KnobGuiBool.h  KnobGuiChoice.cpp  KnobGuiChoice.h  KnobGuiColor.cpp  KnobGuiColor.h  KnobGuiFile.cpp  KnobGuiString.cpp  KnobGuiString.h  NodeGraph.h  NodeGraph30.cpp  NodeViewerContext.cpp  ProgressPanel.cpp  ProgressPanel.h  PropertiesBinWrapper.cpp  PropertiesBinWrapper.h  PythonPanels.cpp  PythonPanels.h  QtColorTriangle.cpp  RightClickableWidget.cpp  RightClickableWidget.h  ScaleSliderQWidget.cpp  ScaleSliderQWidget.h  ScriptEditor.cpp  ScriptEditor.h  ScriptTextEdit.cpp  ScriptTextEdit.h  (+13 more)
Renderer/: CMakeLists.txt
libs/ceres/internal/ceres/: schur_eliminator_impl.h
libs/gflags/: CMakeLists.txt
tools/MINGW-packages/: build_natron_package_repo.sh  windows_pacman_repo_version.txt
tools/MINGW-packages/mingw-w64-imagemagick/: PKGBUILD  fix-compiler-errors.patch
tools/MINGW-packages/mingw-w64-imath/: PKGBUILD
tools/MINGW-packages/mingw-w64-natron-build-deps-common/: PKGBUILD  README.md
tools/MINGW-packages/mingw-w64-natron-build-deps-qt5/: PKGBUILD  README.md
tools/MINGW-packages/mingw-w64-natron-build-deps-qt6/: PKGBUILD  README.md
tools/MINGW-packages/mingw-w64-openexr/: PKGBUILD
tools/MINGW-packages/mingw-w64-seexpr-git/: 0006-seexpr-2.11-cmake_version.patch  PKGBUILD
tools/MacPorts/devel/gnutls/: Portfile
tools/MacPorts/graphics/ImageMagick/: Portfile  Portfile.patch
tools/MacPorts/graphics/libraw/: Portfile.patch
tools/MacPorts/graphics/opencolorio/: Portfile
tools/MacPorts/graphics/openimageio/: Portfile
tools/MacPorts/lang/libomp/: Portfile.patch
tools/MacPorts/multimedia/ffmpeg/: Portfile  Portfile.patch
tools/MacPorts/multimedia/libvpx/: Portfile
tools/MacPorts/multimedia/x265/: Portfile
tools/MacPorts/net/curl/: Portfile
tools/MacPorts/print/ghostscript/: Portfile
tools/jenkins/: build-OSX-installer.sh  build-natron.sh  build-plugins.sh  checkout-repository.sh  compiler-common.sh  genDllVersions.sh  launchBuildMain.sh  manageBuildOptions.sh
tools/utils/: sourceList.py
